test_suite/tests/ui/identifier/variant_struct.stderr
error: #[serde(variant_identifier)] can only be used on an enum
 --> $DIR/variant_struct.rs:6:1
  |
6 | struct S;
  | ^^^^^^

error: aborting due to previous error

